# elementwise-mlir

./: .gitignore  CMakeLists.txt
interface/: interface.h
src/: CMakeLists.txt  entryPoint.cpp  entryPoint.h  standalone.cpp
src/include/mlir/Dialect/: CMakeLists.txt  InitPasses.h
src/include/mlir/Dialect/Elementwise/: CMakeLists.txt  Passes.h  Passes.td
src/include/mlir/Dialect/Elementwise/Pipelines/: Pipelines.h
src/lib/Dialect/: CMakeLists.txt
src/lib/Dialect/Elementwise/: CMakeLists.txt
src/lib/Dialect/Elementwise/Pipelines/: CMakeLists.txt  Pipelines.cpp
src/lib/Dialect/Elementwise/Transforms/: CMakeLists.txt  Tiling.cpp
tests/: linalg.mlir
